# CAS_Code_New

./: .gitignore  AeroTech_M1350W.rse  CppProperties.json  Kaidens_L3_Data.csv  Makefile  PIDController.cpp  PIDController.h  Rocket_Flight_Graphing.m  atmosphere.cpp  atmosphere.h  config.h  fileManip.cpp  fileManip.h  flightFuncs.cpp  flightFuncs.h  flightLogger.cpp  flightLogger.h  interpolate.cpp  interpolate.h  main.cpp  math.cpp  math.h  mathUtils.h  motor.cpp  motor.h  pidDef.cpp  pidDef.h  rocketConfig.cpp  rocketConfig.h  rocketSimulation.cpp  rocketSimulation.h  rocketState.cpp  rocketState.h  utils.cpp  utils.h
AI_Version/: CMakeLists.txt  MathUtils.h  Motor.cpp  PIDController.cpp  PIDController.h  RocketSimulation.cpp  RocketSimulation.h  main.cpp
AI_Version/CompletedFiles/: Atmosphere.cpp  Atmosphere.h  FlightLogger.cpp  FlightLogger.h  Motor.h  RocketConfig.cpp  RocketConfig.h  RocketSimulation.cpp  RocketState.cpp  RocketState.h
toTeensy41/: platformio.ini
toTeensy41/src/: main.cpp
